# c-bootstrap

./: .gitignore  README.developer.md  README.md  c-qanda.md  cdriver-qanda.md  fle-qanda.md  test-package-install.sh
2.0/: README.md  compat_report.html
2.0/bson-incompatibility/: Dockerfile  README.md
amongoc/: create_project.sh
amongoc/amongoc_template/: CMakeLists.txt  build.sh  configure.sh  hello-amongoc.c  run.sh
amongoc/investigations/test/: CMakeLists.txt  README.md  configure.sh  hello-amongoc.c
docs/: c-til.md  cdriver-qanda.md  coverage.md
etc/: create_project.sh  find_cmake.sh  find_os.sh  install_all.sh  install_c_driver.sh  install_libbson.sh  install_libmongocrypt.sh  install_mongo_c_driver.sh  install_mongo_cxx_driver.sh  remove-csfle-markup.patch  setup-c-csfle.sh
investigations/: fam_w0.c
investigations/C3717/: main.c  test-debian-packages.sh
investigations/C4668/: CMakeLists.txt  main.c
investigations/C4816/: CMakeLists.txt  main.c
investigations/C4818/: README.md  apk.md  apt.md  brew.md  conan.md  pacman.md  vcpkg.md  yum.md
investigations/C5712/: connect.c
investigations/C6017/: test-pymongo.py
investigations/CXX2086/: CMakeLists.txt  main.c  run.sh
investigations/CXX2815/: README.md  brew.md  conan.md  vcpkg.md
investigations/DRIVERS-2757/: lookup-many.js  lookup-srv.js  simple_dns_server.py
investigations/H74576/: CMakeLists.txt  README.md  configure.sh  main.c  run.sh
investigations/HELP-52803/: CMakeLists.txt  help_52803_parsed_r1_24.txt  help_52803_parsed_r1_25.txt  main.c  parse_handshake_cfg_r1_24.py  parsed_r1_24.txt  parsed_r1_25.txt  run.sh
investigations/HELP-54336/: README.md  mongo-c-driver-rhel7.spec
investigations/HELP-59749/: CMakeLists.txt  config.md  main.c  run.sh  using-serverMonitoringMode.md  with_pymongo.py
investigations/HELP-69502/: .gitignore  CMakeLists.txt  README.md  build.sh  install-mongo-c-driver.sh  main.c  run.sh
investigations/HELP-82171/: CMakeLists.txt  main.c
investigations/HELP-83370/: CMakeLists.txt  nontailable-timeout.c  run.sh  socketTimeoutMS.c
investigations/HELP-85597/: configure.sh  main.c  run.sh
investigations/MONGOCRYPTD_ARGS/: CMakeLists.txt  configure.sh  main.c
investigations/PHPLIB-1129/: CMakeLists.txt  configure.sh  main.c
investigations/PR1605/: CMakeLists.txt  main.c
investigations/amadeus/: CMakeLists.txt  README.md  main.c  restart_mongos.sh  stop_mongos.sh
investigations/array/: CMakeLists.txt  configure.sh  main.c
investigations/batchSize_changestream/: CMakeLists.txt  main.c
investigations/batchSize_find/: CMakeLists.txt  main.c
investigations/bson_t_allocations/: CMakeLists.txt  main.c  run.sh
investigations/bsont_alloc/: CMakeLists.txt  main.c  run.sh
investigations/bulkWrite_serverless/: README.md
investigations/can_i_build_with_other_macos_sdk/: CMakeLists.txt  README.md  main.c  reconfigure.sh
investigations/cdriver4002/: README.md  compile.sh  run-1.19.2.sh  run-master.sh  workload_find.c
investigations/cdriver4124/: CMakeLists.txt  configure.sh  main.c  run.sh
investigations/cdriver4168/: CMakeLists.txt  create_sockets.py  main.c  repro.c
investigations/cdriver4233/: CMakeLists.txt  foo.h  main.c  reconfigure.sh
investigations/cdriver4238/: README.md  build.sh  configure.sh  run_sequence.c
investigations/cdriver4283/: CMakeLists.txt  main.c  mock_cluster_time.patch  run.sh
investigations/cdriver4300/: CMakeLists.txt  ConnectionsBuildup.yml  CrudActor-1.html  README.md  main.c
investigations/changestream/: CMakeLists.txt  main.c
investigations/const_ptr_ptr/: main.c
investigations/coverage-testing/: build.sh  main.c  output.html  run.sh
investigations/ctest/: CMakeLists.txt  build.sh  configure.sh  foobar.c  run.sh  test.c  test_foobar.c
investigations/curl-schannel-bug/: README.md  start-openssl-server.ps1  test.ps1
investigations/cve_embedded_null/: CMakeLists.txt  configure.sh  exploit.c  main.c  setenv.sh
investigations/cxx2306/: CMakeLists.txt  cxx2306.c
investigations/cxx2388/: CMakeLists.txt
investigations/cxx2616/: install-deps.sh
investigations/cxx_include_c.4158/: CMakeLists.txt  configure.sh
investigations/dllexport/: CMakeLists.txt  README.md  build.ps1  configure.ps1  lib1.c  lib2.c
investigations/do_stalling_operation/: CMakeLists.txt  main.c
investigations/doc-example/: main.c
investigations/doubles/: CMakeLists.txt  build.sh  main.c  setenv.sh
investigations/drivers1621/: CMakeLists.txt  configure.sh  main.c
investigations/duplicate_keys/: CMakeLists.txt  configure.sh  main.c
investigations/encrypted-pkcs8/: CMakeLists.txt  configure.sh  main.c
investigations/exhaust_cursors/: CMakeLists.txt  main.c
investigations/explain/: CMakeLists.txt  main.c
investigations/format-bcon/: CMakeLists.txt  configure.sh  main.c
investigations/generator_expressions/: CMakeLists.txt  main.c
investigations/handshake/: CMakeLists.txt  main.c
investigations/handshake_append.3441/: CMakeLists.txt  configure.sh  main.c
investigations/hello_cmake/: CMakeLists.txt  README.md  build-and-run.sh  main.c
investigations/help27047/: help27047.c
investigations/help27692/: CMakeLists.txt  configure.sh  main.c
investigations/help29988/: CMakeLists.txt  main.c  repro.c  run.sh
investigations/help30191/: CMakeLists.txt  configure.sh  main.c
investigations/help30695/: CMakeLists.txt  README.md  main.c  (+6 more)
investigations/openssl_and_boringssl/example4/: CMakeLists.txt  app.c  dump_symbols.sh  poc_mongoc.c  run.sh
investigations/openssl_and_boringssl/repro/: CMakeLists.txt  boringssl_only.c  build.sh
investigations/print-invalid-arrays/: CMakeLists.txt  README.md  configure.sh  generate-data.py  print-invalid-arrays.c  test-invalid.bson  test-nested.bson  test-valid.bson  test.sh
investigations/profileme/: CMakeLists.txt  README.md  build.sh  configure.sh  install-mongo-c-driver.sh  main.c  run.sh
performance/: README.md  long_runner.c
subtype7/: compile.sh  env.sh
tools/: print_libmongocrypt_version.py
util/: assertions.h  dump.h  hex.h  monitoring.h  test-monitor.h
(+191 files in other folders)
