cmake_minimum_required(VERSION 3.11 FATAL_ERROR)
project(profileme LANGUAGES C)
find_package(mongoc-1.0 REQUIRED)
get_target_property(MONGOC_VERSION mongo::mongoc_shared PROJECT_VERSION)
message ("Found C driver version: ${mongoc-1.0_VERSION}")
add_executable (profileme.out main.c)
target_link_libraries(profileme.out mongo::mongoc_shared)
